--- a/Influencer-website/index.html
+++ b/Influencer-website/index.html
@@ -296,8 +296,18 @@
         <!-- ----------------
                  footer
         ------------------- -->
-    <footer>
-
+    <footer class="footer">
+        <span class="footer-title">Influencer products</span> <br>
+        <span class="footer-credit">
+            Copyright &copy 2020  influencer products <br>
+            All rights reserved
+        </span>
+        <div class="footer-icons">
+            <i class="fa-brands fa-square-instagram"></i>
+            <i class="fa-brands fa-chrome"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-youtube"></i>
+        </div>
     </footer>
 </body>
 </html>
