--- a/Influencer-website/index.html
+++ b/Influencer-website/index.html
@@ -40,7 +40,7 @@
                 </p>
                 <div class="banner-btn">
                     <span>Preebook now</span>
-                    <i class="fa-solid fa-arrow-right"></i>
+                    <i class="fa-solid fa-arrow-right bannter-arrow"></i>
                 </div>
             </div>
             <div class="banner-images">
