--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </p>
                 <div class="banner-btn">
                     <span>Preebook now</span>
-                    <i class="fa-solid fa-arrow-right bannter-arrow"></i>
+                    <i class="fa-solid fa-arrow-right banner-arrow"></i>
                 </div>
             </div>
             <div class="banner-images">
@@ -270,7 +270,7 @@
             </div>
             <div class="grids-see-more">
                 <span>See More</span>
-                <i class="fa-solid fa-arrow-right"></i>
+                <i class="fa-solid fa-arrow-right see-more-arrow"></i>
             </div>
         </div>     
         
